fixed client and css links

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Express a Random Number!</title>
-    <link rel="stylesheet" href="style.css">
-    <script type="text/javascript" src="client.js"></script>
+    <link rel="stylesheet" href="views/style.css">
+    <script type="text/javascript" src="scripts/client.js"></script>
   </head>
   <body>
-
+    <h1>Express!!!!!</h1>
   </body>
 </html>
